chore(java): [CHK-4218] remove java 17 preview features flag